# trade_intelligence

./: .gitignore  ANTIGRAVITY.md  DESIGN.md  PRD.md  TASKS.md  pyproject.toml
ai_agents/: apps.py  graph.py  models.py  signals.py  tasks.py  urls.py  views.py
ai_agents/agents/: __init__.py  fundamental_agent.py  macro_agent.py  supervisor.py  synthesis.py  technical_agent.py
ai_agents/migrations/: 0001_initial.py
analysis/: models.py  tasks.py  urls.py  utils.py  views.py
analysis/migrations/: 0001_initial.py
backtest/: forms.py  models.py  tasks.py  urls.py  views.py
backtest/migrations/: 0001_initial.py
core/: __init__.py  asgi.py  celery.py  settings.py  urls.py
core_app/: urls.py  views.py
dashboard/: consumers.py  routing.py  urls.py  views.py
docs/: README.md  architecture.md  code-standards.md  design-system.md  setup.md
fundamentals/: models.py  tasks.py
fundamentals/migrations/: 0001_initial.py
market_data/: admin.py  apps.py  models.py  signals.py  tasks.py  urls.py  utils.py  views.py
market_data/migrations/: 0001_initial.py
news/: models.py  tasks.py  utils.py
news/migrations/: 0001_initial.py  0002_macroindicator.py
risk/: forms.py  models.py  urls.py  views.py
risk/migrations/: 0001_initial.py
static/css/: design_system.css  main.css
static/js/: chart.js  websocket.js
templates/: base.html
templates/account/: email_confirm.html  login.html  password_reset.html  signup.html
templates/backtest/: form.html  result.html
watchlist/: apps.py  forms.py  models.py  signals.py  tasks.py  urls.py  views.py
(+16 files in other folders)
