[project]
name = "trade-indicator"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.6.3",
    "channels>=4.3.2",
    "django>=5.2.15",
    "django-allauth>=65.18.0",
    "htmx>=0.0.0",
    "python-decouple>=3.8",
    "redis>=8.0.1",
]
